# lilbank

./: .gitignore  README.md  README.org  meson.build
.ccls-cache/@@home@nyasha@Documents@lilbank/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@11@algorithm.blob  @usr@include@c++@11@array.blob  @usr@include@c++@11@backward@auto_ptr.h.blob  @usr@include@c++@11@backward@binders.h.blob  @usr@include@c++@11@bit.blob  @usr@include@c++@11@bits@algorithmfwd.h.blob  @usr@include@c++@11@bits@align.h.blob  @usr@include@c++@11@bits@alloc_traits.h.blob  @usr@include@c++@11@bits@allocated_ptr.h.blob  @usr@include@c++@11@bits@allocator.h.blob  @usr@include@c++@11@bits@atomic_base.h.blob  @usr@include@c++@11@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@11@bits@basic_string.h.blob  @usr@include@c++@11@bits@basic_string.tcc.blob  @usr@include@c++@11@bits@char_traits.h.blob  @usr@include@c++@11@bits@charconv.h.blob  @usr@include@c++@11@bits@concept_check.h.blob  @usr@include@c++@11@bits@cpp_type_traits.h.blob  @usr@include@c++@11@bits@cxxabi_forced.h.blob  @usr@include@c++@11@bits@cxxabi_init_exception.h.blob  @usr@include@c++@11@bits@exception.h.blob  @usr@include@c++@11@bits@exception_defines.h.blob  @usr@include@c++@11@bits@exception_ptr.h.blob  (+177 more)
lib/: account.cpp  account.hpp  bank.hpp  files.cpp  files.hpp  meson.build
src/: .#bank_test.cpp  account.hpp  bank.hpp  bank_test  bank_test.cpp  bankfile.cpp  main.cpp  makefile  meson.build  payment.cpp
tests/: meson.build  test_main.cpp
(+6 files in other folders)
